@@ -4,14 +4,17 @@ News
 Pyclewn 1.6
 -----------
 
-.. February 26, 2011
+.. February 28, 2011
 
 Bug fixes
 ^^^^^^^^^
 
+* On gdb abnormal termination, save the project file if exists and forcibly
+  terminate the current session.
 * Set breakpoint in a template function.
 * Give an explicit error message after installation failure, for example when
-  the environment var EDITOR is set to something different than vim or empty.
+  the environment var ``EDITOR`` is set to something different than vim or
+  empty.
 
 Pyclewn 1.5
 -----------
